--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Memo Test Application created with React"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sigmar+One">
     <title>Memo Test App</title>
   </head>
   <body>
