--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <base href="%PUBLIC_URL%/">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Memo Test Application created with React"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sigmar+One">
