--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Memo App</title>
     <base href="%PUBLIC_URL%/">
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.webp" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Memo Test Application created with React"/>
+    <meta name="theme-color" content="#6eb5b5" />
+    <meta name="description" content="Memo Application created with React"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sigmar+One">
-    <title>Memo Test App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
