--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#6eb5b5" />
+    <meta name="theme-color" content="#3ABFFF" />
     <meta name="description" content="Memo Application created with React"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sigmar+One">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
